update for fixed dns

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<link rel="canonical" href="/static-site/about/">
-<meta http-equiv="refresh" content="0; url=/static-site/about/">
+<link rel="canonical" href="https://aeva.online/about/">
+<meta http-equiv="refresh" content="0; url=https://aeva.online/about/">
 <title>Redirect</title>
-<p><a href="/static-site/about/">Click here</a> to be redirected.</p>
+<p><a href="https://aeva.online/about/">Click here</a> to be redirected.</p>
