update from PM and Eng sides

--- a/about/index.html
+++ b/about/index.html
@@ -94,13 +94,17 @@
  alt="Profile photo of me with a side shave, purple hair, and glasses on a grey background"
  style="float: right;" width="250" /></p>
 <p>Hi there!</p>
-<p>My name's aeva (&quot;AY-vuh&quot;), and my pronoun is &quot;they&quot;. It's nice to meet you 😄</p>
-<p>I work with a few different Open Source Foundations on behalf of Microsoft, and am the Open Source Program Manager for the Azure Confidential Computing team.</p>
+<p>My name's Aeva (&quot;AY-vuh&quot;), and my pronoun is &quot;they&quot;. It's nice to meet you 😄</p>
+<h2 id="what-i-do">What I do ...</h2>
+<p>I'm the Open Source Program Manager for the Azure Confidential Computing team, for which I work with and track events in a few different Open Source Foundations (CCC, CNCF, OIF, OSI) on behalf of Microsoft.</p>
 <p>You might have heard of a few projects I've worked on previously: <a href="https://mysql.org">mysql</a>, <a href="https://openstack.org">openstack</a>, <a href="https://github.com/openstack/ironic/">ironic</a>, and <a href="https://kubernetes.io/">kubernetes</a>.</p>
-<p>A little about me ...</p>
-<p>I'm incurably geeky, an ethical hacker, and a chronically poor sleeper. I am politically queer because there isn't any other ethical choice under capitalism. I practice a mixture of the buddha dharma and a combination of hindu, jewish, and wiccan traditions I grew up with. I believe in the oxford comma. I'm also a survivor of a long-term disability (I spent half of my 20's home-bound with lyme disease) and transgender.</p>
-<p>Yes, I talk openly about being trans, both on here and on other social media. Publicly transitioning is a complicated and personal aspect of each person's story. When I transitioned mid-career, it left me jobless and uninsured for about a year during the Trump administration. This taught me a lot more about privilege. I'm thankful for the chance to reflect on and re-contextualize my life, and grateful to all the friends who supported me.</p>
-<p>Even though I have a program manager's title now, in my heart I’m still just a rusty developer! 😉</p>
+<p>I'm also active in a number of my local (non-tech) communities, was recently published in an Anthology of Trans Buddhist authors, and am working on my own book now.</p>
+<h2 id="why-i-do-it">Why I do it ...</h2>
+<p>I'm incurably geeky and incorrigably inquisitive, which may be why I'm also a chronically poor sleeper. I am politically queer because there isn't any other ethical choice, and I'm simply queer because that's who I am. I practice my own admixture of the buddha dharma, hindu, jewish, and wiccan traditions which I grew up with. I believe in the oxford comma. I'm also a survivor of a long-term disability (I spent half of my 20's home-bound with lyme disease) and trans gender.</p>
+<p>I've decided to talk openly about being trans, both on here and on other social media, and offline (sometimes in front of large audiences). Publicly transitioning is a complicated aspect of each person's story; don't assume anything I say translates to any other person of trans experience. When I transitioned mid-career, I found myself jobless and uninsured for about a year -- during the Trump administration! This taught me a lot about privilege in a way that was very difficult, but in hindsight I'm also very grateful for.</p>
+<p>I'm thankful for the chance to reflect on and re-contextualize my life, and to all the friends who supported me through this journey. 💜</p>
+<h2 id="what-s-next">What's next?</h2>
+<p>Even though I have a program manager's title now, in my heart I’m still just a rusty developer! And I have some very cool plans, which I look forward to being able to share 😉</p>
 <p>Take a look around the site -- you'll find a blog, my resume, and both social media and direct contact info.</p>
 
         </div>
