--- a/about/index.html
+++ b/about/index.html
@@ -96,8 +96,9 @@
 <p>Hi there!</p>
 <p>My name's Aeva (&quot;AY-vuh&quot;), and my pronoun is &quot;they&quot;. It's nice to meet you 😄</p>
 <p>I'm incurably geeky and incorrigably inquisitive, which may be why I'm also a chronically poor sleeper. I am politically queer because there is no other ethical choice, and I'm queer <em>just because that's who I am</em>. I grew up stretched between several cultures - Dutch Catholic, and Jewish, and Hindi - and after twenty years studying the Buddha Dharma, I carry on practicing my own mix of it all. I'm also a survivor of a long-term disability, and I'm trans.</p>
-<p>I've decided to talk openly about being transgender, both online and offline, and sometimes even in front of large audiences, because I think it's important to raise awareness around issues that would have saved me a lot of suffering growing up. Being <em>trans</em>, coming out <em>as</em> trans, especially mid-career, is also a complicated business, and an intensely personal one. Don't assume that anything I say about my journey is true for any other person of trans experience.</p>
-<p>I came out in 2017, in the beginning of the Trump administration, and I ended up jobless and uninsured for a year because of it. While I'm thankful for the chance to reflect on and re-contextualize my life, I'm even more grateful to all the friends who have supported me along this journey. 💜</p>
+<p>I came out in 2017 - in the beginning of the Trump administration. To my own surprise, circumstances then left me jobless and without health insurance for a year. While I'm thankful for the chance to reflect on and re-contextualize my life, I'm even more grateful to the friends and family who supported me along the way!</p>
+<p>So ... yes, talk openly about being transgender, both online and offline (and sometimes even in front of large audiences) because I think it's important to raise awareness around issues that would have saved me a lot of suffering growing up. <em>Being</em> trans, coming out <em>as</em> trans, especially mid-career, is a complicated and confusing business, and also an intensely personal one. Everyone's journey is different. I'm in a pretty great place these days, happier in my body than I've ever been.</p>
+<p>-💜</p>
 
         </div>
         
