minor updats to OSI plat

--- a/journal/2021-osi-platform/index.html
+++ b/journal/2021-osi-platform/index.html
@@ -111,12 +111,15 @@ of the <a href="https://github.com/kubernetes/community/tree/master/committee-co
 Committee</a>,
 to which I've brought a framework for Consent Culture and a Restorative
 approach to our incident handling procedures. I previously served on the
-<a href="https://www.openstack.org/blog/open-mic-spotlight-devananda-van-der-veen/">OpenStack Technical
-Committee</a>,
-led the OpenStack Ironic project team, served as a board member for the
-<a href="https://www.consent.academy/">Consent Academy</a>. I was an active participant in
-the MySQL community for years, and have contributed to many other projects,
-such as Ansible, Matrix, Mixxx, Elastic, and OpenVZ.</p>
+<a href="https://www.openstack.org/">OpenStack</a> Technical Committee, led the <a href="https://wiki.openstack.org/wiki/Ironic">OpenStack
+Ironic</a> project team, participated as a
+developer and speaker in the MySQL community for almost a decade, and have
+contributed to many other projects, such as Ansible, Matrix, Mixxx, Elastic,
+and OpenVZ. I also served as a board member for the <a href="https://www.consent.academy/">Consent
+Academy</a>, a Seattle-based 501c(3) non-profit, for
+several years. Some of my views on the internal interplay between gender and
+buddhism were recently published in
+<a href="https://www.goodreads.com/book/show/52531165-transcending">Transcending</a>.</p>
 <h2 id="views-on-open-source">Views On Open Source<a class="zola-anchor" href="#views-on-open-source" aria-label="Anchor link for: views-on-open-source">§</a>
 </h2>
 <p>In 2021, open source software is used at every company and in many physical
@@ -126,11 +129,11 @@ true), or a that &quot;open sourcing&quot; something is a one-off event (also no
 This lexical confusion continues to pose a risk: views not grounded in
 experience and an understanding of the legal framework (licensing and
 governance) belie the complexity of choices which ultimately shape the
-communities of successful open source projects, and a proliferation of
-mismanaged open source software projects will create unnecessary security and
-legal risk for our institutions.</p>
-<p>To counter this, I believe we need to increase educational outreach, with
-specific focuses on:</p>
+communities of successful open source projects. A proliferation of mismanaged
+open source software projects will create unnecessary security and legal risk
+for our institutions.</p>
+<p>To counter this, I believe we need to increase educational outreach with
+specific focus towards:</p>
 <ul>
 <li>educating business leaders to empower them with the lexical tools to engage
 in nuanced discussions about open source strategy; </li>
@@ -139,10 +142,10 @@ data privacy, technology (ab)use, and international copyright;</li>
 <li>engaging in the discussion around open source software supply chain security
 as a community issue.</li>
 </ul>
-<p>I agree with the objectives others have stated in previous years, that the OSI
-be sufficiently funded that this work does not entirely fall on volunteers, and
-would like to see outreach to grow the affiliate network continue so we can
-support increasing staff dedicated to this mission.</p>
+<p>I agree with the objective others have stated in previous years: that the OSI
+should be sufficiently funded so this work does not entirely fall on
+volunteers. I would like to see outreach to grow the affiliate network continue
+so we can support increasing staff dedicated to this mission.</p>
 <h2 id="broader-concerns">Broader Concerns<a class="zola-anchor" href="#broader-concerns" aria-label="Anchor link for: broader-concerns">§</a>
 </h2>
 <p>Our society is, once again, grappling with the realization that technology is
