update index and fix media links

--- a/media/index.html
+++ b/media/index.html
@@ -101,9 +101,9 @@
 <p><strong>2011 - 2017</strong>: Many talks about OpenStack and Bare Metal Clouds at events around the world.</p>
 <h1 id="upcoming-talks">Upcoming Talks</h1>
 <table><thead><tr><th>Date</th><th>Event</th><th>Session</th></tr></thead><tbody>
-<tr><td>4 May</td><td>Cloud Native Security Day</td><td><a href="https://sched.co/iRnB">Introducing Confidential Computing</a></td></tr>
-<tr><td>6 May</td><td>KubeCon Keynote</td><td><a href="https://sched.co/igPC">Shaping Kubernetes Community Culture</a></td></tr>
-<tr><td>19 May</td><td>RSAConference</td><td><a href="https://www.rsaconference.com/usa/agenda/session/doing-the-safety-dance-will-trusted-execution-environments-protect-us">Doing the Safety Dance: Will Confidential Computing Protect Us?</a></td></tr>
+<tr><td>19 May</td><td><a href="https://www.rsaconference.com/">RSAConference</a></td><td><a href="https://www.rsaconference.com/usa/agenda/session/doing-the-safety-dance-will-trusted-execution-environments-protect-us">Doing the Safety Dance: Will Confidential Computing Protect Us?</a></td></tr>
+<tr><td>6 May</td><td><a href="https://kccnceu2021.sched.com/">KubeCon</a> Keynote</td><td><a href="https://sched.co/igPC">Shaping Kubernetes Community Culture</a></td></tr>
+<tr><td>4 May</td><td><a href="https://events.linuxfoundation.org/cloud-native-security-day-europe/">Cloud Native Security Day</a></td><td><a href="https://sched.co/iRnB">Introducing Confidential Computing</a></td></tr>
 </tbody></table>
 <h1 id="2021">2021</h1>
 <table><thead><tr><th>Date</th><th>Event</th><th>Session</th></tr></thead><tbody>
