--- a/about/index.html
+++ b/about/index.html
@@ -97,10 +97,12 @@
  alt="Profile photo of me with a side shave, purple hair, and glasses on a grey background"
  style="float: right;" width="250" /></p>
 <p>Hi there!</p>
-<p>My name's Aeva (&quot;AY-vuh&quot;), and my pronoun is &quot;they&quot;. It's nice to meet you 😄</p>
-<p>I'm incurably geeky and incorrigably inquisitive, which may be why I'm also a chronically poor sleeper. I am politically queer because there is no other ethical choice, and I'm queer <em>just because that's who I am</em>. I grew up stretched between several cultures - Dutch Catholic, and Jewish, and Hindi - and after twenty years studying the Buddha Dharma, I carry on practicing my own mix of it all. I'm also a survivor of a long-term disability, and I'm trans.</p>
+<p>My name's Aeva (&quot;AY-vuh&quot;), I am non-binary, and my pronouns are &quot;they&quot; and &quot;them&quot;. It's nice to meet you 😄</p>
+<p>I'm incurably geeky and incorrigably inquisitive, which may be why I'm also a chronically poor sleeper. I am politically queer because there is no other ethical choice, and I'm queer <em>just because that's who I am</em>. My early years spanned several cultures and languages - Dutch Catholic, and Jewish, and Hindi - and after twenty years studying the Buddha Dharma, I carry on practicing my own mix of it all. I'm also a survivor of a long-term disability, and I'm trans.</p>
 <p>I came out in 2017 - in the beginning of the Trump administration. To my own surprise, circumstances then left me jobless and without health insurance for a year. While I'm thankful for the chance to reflect on and re-contextualize my life, I'm even more grateful to the friends and family who supported me along the way!</p>
 <p>So ... yes, I talk openly about being transgender (offline, online, and even on stage). Had I had healthier role models growing up, I might have avoideda lot of suffering growing up. <em>Being</em> trans, coming out <em>as</em> trans, especially mid-career, is a complicated and confusing business, and also an intensely personal one. Everyone's journey is different. I'm in a pretty great place these days, happier in my body than I've ever been.</p>
+<p>I've had (and continue to have) a thriving career building technology, mostly infrastructure things and sometimes security things. Sometimes I talk about that publicly, too!</p>
+<p>You can usually find a list of upcoming public appearances <a href="../media/#upcoming-talks">on my media page</a>.</p>
 <p>-💜</p>
 
     </div>
