--- a/journal/2019-transitioning-is-strength/index.html
+++ b/journal/2019-transitioning-is-strength/index.html
@@ -100,6 +100,7 @@ I can’t imagine how much you must have been hurting inside to choose to do tha
 <li>Sarah Novotny</li>
 </ul>
 </blockquote>
+<span id="continue-reading"></span>
 <hr />
 <h1 id="life-changes">Life, Changes<a class="zola-anchor" href="#life-changes" aria-label="Anchor link for: life-changes">🔗</a></h1>
 <p>A few days ago, I was having dinner with Sarah at one of our old haunts — it’s been four years since she moved away from Seattle, and the same Ethiopian restaurant is still here, still serving up the same delicious dinners on platters of Teff Injera. Somehow, it seems longer than four years. So much has changed in that time.</p>
