--- a/media/index.html
+++ b/media/index.html
@@ -101,10 +101,13 @@
 <p><strong>2011 - 2017</strong>: Many talks about OpenStack and Bare Metal Clouds at events around the world.</p>
 <h1 id="upcoming-talks">Upcoming Talks</h1>
 <table><thead><tr><th>Date</th><th>Event</th><th>Session</th></tr></thead><tbody>
-<tr><td>11 June</td><td><a href="https://events.linuxfoundation.org/confidential-computing-developer-summit/">Confidential Computing Developer Summit</a></td><td>Mistress of Ceremonies, Lead Event Planner</td></tr>
+<tr><td>18 July</td><td><a href="https://www.aasect.org/">AASECT</a> Training @ Antioch</td><td>Educational Panel - perspective on queer and trans experience</td></tr>
+<tr><td>Late Sept</td><td>OSS-NA</td><td>???</td></tr>
+<tr><td>Early Oct</td><td>KubeCon NA</td><td>???</td></tr>
 </tbody></table>
 <h1 id="2021">2021</h1>
 <table><thead><tr><th>Date</th><th>Event</th><th>Session</th></tr></thead><tbody>
+<tr><td>11 June</td><td>Mistress of Ceremonies for <a href="https://events.linuxfoundation.org/confidential-computing-developer-summit/">Confidential Computing Developer Summit</a></td><td><a href="https://www.youtube.com/playlist?list=PLmfkUJc39uMhhLko5CMkxBNQlAIPEUQ33">Full Event Recordings</a></td></tr>
 <tr><td>19 May</td><td><a href="https://www.rsaconference.com/">RSAConference</a></td><td><a href="https://www.rsaconference.com/usa/agenda/session/doing-the-safety-dance-will-trusted-execution-environments-protect-us">Doing the Safety Dance: Will Confidential Computing Protect Us?</a> (no public recording)</td></tr>
 <tr><td>6 May</td><td><a href="https://kccnceu2021.sched.com/">KubeCon</a> Keynote</td><td><a href="https://sched.co/igPC">Shaping Kubernetes Community Culture</a> (<a href="https://youtu.be/aVZWOMGE5q8">video</a>)</td></tr>
 <tr><td>4 May</td><td><a href="https://events.linuxfoundation.org/cloud-native-security-day-europe/">Cloud Native Security Day</a></td><td><a href="https://sched.co/iRnB">Introducing Confidential Computing</a> (<a href="https://youtu.be/Fl7QwG5BSAQ">video</a>)</td></tr>
