--- a/journal/2021-osi-platform/index.html
+++ b/journal/2021-osi-platform/index.html
@@ -82,7 +82,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>6 minute read</span>
+    <span>7 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -97,10 +97,10 @@
 <p>This is my official announcement post for my candidacy for the OSI Board of Directors in 2021. Read on for the description of my platform and goals.
 This post is shared on <a href="https://aeva.online/journal/2021-osi-platform/">my personal site</a> and on the <a href="https://wiki.opensource.org/bin/Main/OSI%20Board%20of%20Directors/Board%20Member%20Elections/2021%20Individual%20and%20Affiliate%20Elections/Black2021/">2021 OSI Board Elections page</a>.</p>
 </blockquote>
-<span id="continue-reading"></span><h2 id="about-me">About Me<a class="zola-anchor" href="#about-me" aria-label="Anchor link for: about-me">🔗</a></h2>
-<p>I am a software engineer, a buddhist, and a trans and non-binary person. Today,
-I work as the Open Source Program Manager for the Azure Confidential Compute
-team, for which I engage in technical and community building work in both the
+<span id="continue-reading"></span><h2 id="editing-note">Editing Note<a class="zola-anchor" href="#editing-note" aria-label="Anchor link for: editing-note">🔗</a></h2>
+<p>As the OSI Election was originally run in February and re-run in July, I have updated my platform post, both here and on the OSI wiki, to reflect a change in my role at Microsoft. Incidentally, that change also better positions me to support the OSI. I have also made some minor edits to my platform to reflect changes in the current political and technical state of relevant affairs, which are also reflected below. The original content is preserved in the OSI wiki history.</p>
+<h2 id="about-me">About Me<a class="zola-anchor" href="#about-me" aria-label="Anchor link for: about-me">🔗</a></h2>
+<p>I am a software engineer, a buddhist, and a trans and non-binary person. Today, I work in the Azure Office of the CTO's Open Source Ecosystem team, and engage in technical and community building work in both the
 <a href="https://confidentialcomputing.io">Confiential Computing Consortium</a> (CCC) and
 <a href="https://cncf.io">Cloud Native Computing Foundation</a> (CNCF). I am also a member
 of the <a href="https://github.com/kubernetes/community/tree/master/committee-code-of-conduct">Kubernetes Code of Conduct
@@ -120,9 +120,9 @@ buddhism were recently published in
 <p>In 2021, open source software is used at every company and in many physical
 products we rely on, from phones to fridges to cars. As a result, some (mostly
 outside this community) now believe that &quot;open source&quot; is a business model (not
-true), or a that &quot;open sourcing&quot; something is a one-off event (also not true).
+true), or that &quot;open sourcing&quot; something is a one-off event (also not true).
 This lexical confusion continues to pose a risk: views not grounded in
-experience and an understanding of the legal framework (licensing and
+experience and an understanding of the legal frameworks (licensing and
 governance) belie the complexity of choices which ultimately shape the
 communities of successful open source projects. A proliferation of mismanaged
 open source software projects will create unnecessary security and legal risk
@@ -135,12 +135,14 @@ in nuanced discussions about open source strategy; </li>
 <li>encouraging lawyers to develop a deeper understanding at the intersection of
 data privacy, technology (ab)use, and international copyright;</li>
 <li>engaging in the discussion around open source software supply chain security
-as a community issue.</li>
+as a community-wide issue.</li>
 </ul>
 <p>I agree with the objective others have stated in previous years: that the OSI
-should be sufficiently funded so this work does not entirely fall on
-volunteers. I would like to see outreach to grow the affiliate network continue
-so we can support increasing staff dedicated to this mission.</p>
+should be sufficiently funded so this work does not entirely fall on volunteers.
+I would like to see outreach to grow the affiliate network continue so we can
+support increasing staff dedicated to this mission. And lastly, I could imagine
+additional work within, or akin to, ClearlyDefined, that might support one or
+more of these goals, though I do not have any specific solution in mind.</p>
 <h2 id="broader-concerns">Broader Concerns<a class="zola-anchor" href="#broader-concerns" aria-label="Anchor link for: broader-concerns">🔗</a></h2>
 <p>Our society is, once again, grappling with the realization that technology is
 not neutral: like any tool, software can be used for both good and evil, to
@@ -148,16 +150,19 @@ uplift or to oppress. In 2015 I was confronted with this, called on to brief a
 foreign military on my open source contributions, it became clear they were
 using software I had built in ways I did not support. </p>
 <p>I appreciate the debate on ethical source licenses, and believe this comes from
-our reflexive care for the impact our work has on society, though I do not
-believe licenses are the right tool for this. We need better laws regulating
-the civil and military use of certain technologies, and for more lawyers to
-become educated in technology and its impact on privacy and civil rights. </p>
-<p>With the current spotlight on the (ab)uses of Facial Recognition Technology,
-which have already resulted in calls to ban FRT <a href="https://www.banfacialrecognition.com/">in the
+our great care for the impact our work has on society. Though I do not believe
+licenses are the right tool for this today, I appreciate the discussions and
+look forward to learning more about the tools available. I believe we need
+better laws regulating the civil and military use of certain technologies, for
+more lawyers and policy-makers to become educated on technology, and especially
+its impact on privacy and civil rights.</p>
+<p>With spotlights on the abuses of machine learning and Facial Recognition
+Technology, which have already resulted in calls to ban FRT <a href="https://www.banfacialrecognition.com/">in the
 House</a> and in <a href="https://www.reuters.com/article/us-washington-tech-idUSKBN21I3AS">some
-states</a>, I
-believe this will continue to be an important, and emotionally-charged,
-conversation, in the years ahead.</p>
+states</a>, on
+social media and algorithmic bias, and on the principle of digital sovereignty,
+I believe that the ethical use of open source will continue to be an important,
+and emotionally-charged, conversation, in the years ahead.</p>
 <h2 id="my-background">My Background<a class="zola-anchor" href="#my-background" aria-label="Anchor link for: my-background">🔗</a></h2>
 <p>In 2003, before I knew about the OSI or OSD, I had an epiphany as I started my
 second job: I could no longer use tools I had built simply because that code
