updates for new bio and new menu

--- a/about/index.html
+++ b/about/index.html
@@ -55,12 +55,6 @@
                         
                             <a itemprop="url"
                                class=""
-                               href="&#x2F;static&#x2F;cv.pdf">
-                                <span itemprop="name">CV |
-                                </span></a>
-                        
-                            <a itemprop="url"
-                               class=""
                                href="&#x2F;tags&#x2F;">
                                 <span itemprop="name">search |
                                 </span></a>
@@ -74,7 +68,7 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
-        <h1 itemprop="headline">hello, world</h1>
+        <h1 itemprop="headline">Dossier: Aeva Black</h1>
         <span class="muted">
     <svg style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
@@ -94,16 +88,22 @@
     </header>
     <div itemprop="articleBody">
       <p><img src="profile.jpeg"
- alt="Profile photo of me with a side shave, purple hair, and glasses on a grey background"
+ alt="Profile photo of me with a side shave, purple hair, and glasses on a grey background, wearing a suit jacket and silk blouse with a gold chain necklace."
  style="float: right;" width="250" /></p>
-<p>Hi there!</p>
-<p>My name's Aeva (&quot;AY-vuh&quot;), I am non-binary, and my pronouns are &quot;they&quot; and &quot;them&quot;. It's nice to meet you 😄</p>
-<p>I'm incurably geeky and incorrigably inquisitive, which may be why I'm also a chronically poor sleeper. I am politically queer because there is no other ethical choice, and I'm queer <em>just because that's who I am</em>. My early years spanned several cultures and languages - Dutch Catholic, and Jewish, and Hindi - and after twenty years studying the Buddha Dharma, I carry on practicing my own mix of it all. I'm also a survivor of a long-term disability, and I'm trans.</p>
-<p>I came out in 2017 - in the beginning of the Trump administration. To my own surprise, circumstances then left me jobless and without health insurance for a year. While I'm thankful for the chance to reflect on and re-contextualize my life, I'm even more grateful to the friends and family who supported me along the way!</p>
-<p>So ... yes, I talk openly about being transgender (offline, online, and even on stage). Had I had healthier role models growing up, I might have avoided a lot of suffering growing up. <em>Being</em> trans, coming out <em>as</em> trans, especially mid-career, is a complicated and confusing business, and also an intensely personal one. Everyone's journey is different. I'm in a pretty great place these days, happier in my body than I've ever been.</p>
-<p>I've had (and continue to have) a thriving career building IT infrastructure with, and contributing to, open source software. Sometimes I talk about that publicly, too! 😏</p>
-<p>You can find a list of past and upcoming public appearances <a href="../media/#upcoming-talks">on my media page</a>.</p>
-<p>-💜</p>
+<p>CURRENT NAME: aeva black</p>
+<p>DEAD NAME: XXXXXXXXX XXX XXX XXXX</p>
+<p>AGE: about 40</p>
+<p>GENDER: irrelevant</p>
+<p>FAVORITE COLOR: red and black</p>
+<p>LOCATION: seattle, wa</p>
+<p>CURRICULUM VITAE: classified</p>
+<p>HUMAN LANGUAGES: english, german, mandarin, sanskrit</p>
+<p>COMPUTER LANGUAGES: C/C++, Tcl/Tk, Perl, Python, PHP, bash, SQL</p>
+<p>BIOGRAPHY:</p>
+<blockquote>
+<p>Aeva Black is an open source software architect in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. While a Master Engineer at HPE, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
+<p>Aeva is a queer and non-binary geek, a lifelong student of the buddha dharma, and an aspiring author. They are a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they also sit on the Kubernetes Code of Conduct Committee, and work to improve diversity and inclusion in the tech industry.</p>
+</blockquote>
 
     </div>
 
