update contact info

--- a/contact/index.html
+++ b/contact/index.html
@@ -87,19 +87,26 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p>On social media, you can find me on <a href="https://twitter.com/aevavoom">twitter</a> <a href="https://www.linkedin.com/in/aevaonline/">linkedin</a> <a href="https://github.com/AevaOnline">github</a>, <a href="https://fosstodon.org/@aeva">mastodon</a>, and some other spaces too.</p>
-<p>By email, you can:</p>
+      <p><strong>On social media</strong>, you can find me on <a href="https://twitter.com/aevavoom">twitter</a>, <a href="https://www.linkedin.com/in/aevaonline/">linkedin</a>, <a href="https://github.com/AevaOnline">github</a>, and occasionally <a href="https://fosstodon.org/@aeva">mastodon</a>.</p>
+<p><strong>By email</strong>, you can:</p>
 <ul>
-<li>reach me directly at: <strong>aeva</strong> at <strong>aeva dot online</strong></li>
-<li>reach me securely at: <strong>aeva dot online</strong> at <strong>protonmail dot ch</strong></li>
-<li>reach my alter-ego at: <strong>aevander</strong> at <strong>microsoft dot com</strong></li>
+<li>reach me directly: aeva <strong>at</strong> aeva dot online</li>
+<li>reach me securely: aeva dot online <strong>at</strong> protonmail dot ch</li>
+<li>reach me seriously: aeva dot black <strong>at</strong> microsoft dot com</li>
 </ul>
-<p>Alternatively...</p>
+<p>If you know my nicks, <strong>DM me on</strong>:</p>
 <ul>
-<li>sign my <a href="/static/gpg">my GPG key</a>, then email it or upload to a keyserv</li>
-<li>add <a href="/static/ssh">my SSH Public key</a> to your ACLs</li>
+<li>several Slacks</li>
+<li>a diaspora of Discords</li>
+<li>libera and oftc IRC networks</li>
 </ul>
-<p>I don't <a href="https://xkcd.com/1254/">check my voicemail</a>, so if all else fails, <a href="https://tools.ietf.org/html/rfc1149">send a carrier pidgeon</a></p>
+<p>Yes, I use Signal; no, I'm not putting my # up here.</p>
+<p>You can also:</p>
+<ul>
+<li>encrypt things to <a href="/static/gpg">my GPG key</a></li>
+<li>add <a href="/static/ssh">my SSH Public key</a> to your system, so I can write on your wall</li>
+</ul>
+<p>I don't <a href="https://xkcd.com/1254/">check my voicemail</a>, so if all else fails, <a href="https://tools.ietf.org/html/rfc1149">try using RFC 1149</a>.</p>
 
     </div>
 
