minor edit to bio

--- a/about/index.html
+++ b/about/index.html
@@ -101,8 +101,8 @@
 <p>COMPUTER LANGUAGES: C/C++, Tcl/Tk, Perl, Python, PHP, bash, SQL</p>
 <p>BIOGRAPHY:</p>
 <blockquote>
-<p>Aeva Black is an open source software architect in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. While a Master Engineer at HPE, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
-<p>Aeva is a queer and non-binary geek, a lifelong student of the buddha dharma, and an aspiring author. They are a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they also sit on the Kubernetes Code of Conduct Committee, and work to improve diversity and inclusion in the tech industry.</p>
+<p>Aeva Black is an open source hacker in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. When previously a Master Engineer at HPE, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
+<p>Aeva is also a queer and non-binary geek, a lifelong student of the buddha dharma, and an aspiring author. They are a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they also sit on the Kubernetes Code of Conduct Committee, and work to improve diversity and inclusion in the tech industry.</p>
 </blockquote>
 
     </div>
