--- a/about/index.html
+++ b/about/index.html
@@ -90,19 +90,18 @@
       <p><img src="profile.jpeg"
  alt="Profile photo of me with a side shave, purple hair, and glasses on a grey background, wearing a suit jacket and silk blouse with a gold chain necklace."
  style="float: right;" width="250" /></p>
-<p>CURRENT NAME: aeva black</p>
-<p>DEAD NAME: XXXXXXXXX XXX XXX XXXX</p>
+<p>NAME: aeva black</p>
 <p>AGE: about 40</p>
 <p>GENDER: irrelevant</p>
-<p>FAVORITE COLOR: red and black</p>
 <p>LOCATION: seattle, wa</p>
+<p>FAVORITE COLOR: red/black</p>
 <p>CURRICULUM VITAE: classified</p>
-<p>HUMAN LANGUAGES: english, german, mandarin, sanskrit</p>
+<p>DEAD NAME: XXXXXXXXX XXXXXXXXXX</p>
 <p>COMPUTER LANGUAGES: C/C++, Tcl/Tk, Perl, Python, PHP, bash, SQL</p>
 <p>BIOGRAPHY:</p>
 <blockquote>
-<p>Aeva Black is an open source hacker in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. When previously a Master Engineer at HPE, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
-<p>Aeva is also a queer and non-binary geek, a lifelong student of the buddha dharma, and an aspiring author. They are a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they also sit on the Kubernetes Code of Conduct Committee, and work to improve diversity and inclusion in the tech industry.</p>
+<p>Aeva Black is an open source hacker in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They are a board member of the Open Source Initiative, and previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. While a Master Engineer at HPE, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
+<p>Aeva is a queer and non-binary geek, a lifelong student of the buddha dharma, a consent advocate, an aspiring author, and a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they are committed to improving diversity and inclusion in the tech industry, and advocating for digital privacy rights.</p>
 </blockquote>
 
     </div>
