--- a/media/index.html
+++ b/media/index.html
@@ -97,7 +97,9 @@
 <table><thead><tr><th>Date</th><th>Event</th><th>Session</th></tr></thead><tbody>
 <tr><td>27 Sept</td><td>OSS-NA</td><td><a href="https://sched.co/lAUA">Evolving the Confidential Computing Consortium</a></td></tr>
 <tr><td>Early Oct</td><td>KubeCon NA</td><td>(TBD)</td></tr>
+<tr><td>Early Oct</td><td>Supply Chain Security Con</td><td>(TBD)</td></tr>
 <tr><td>Late Oct</td><td>Linux Foundation Member Summit</td><td>(TBD)</td></tr>
+<tr><td>Early Nov</td><td>SeaGL</td><td>(TBD)</td></tr>
 </tbody></table>
 <h1 id="2021">2021</h1>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
