minor bio edits

--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
     </header>
     <div itemprop="articleBody">
       <p><img src="profile.jpeg"
- alt="Profile photo of me with a side shave, purple hair, and glasses on a grey background, wearing a suit jacket and silk blouse with a gold chain necklace."
+ alt="Profile photo of a non-binary person with olive skin, sporting purple chin-length hair and a side shave, with gold-rimmed glasses. The background is grey with a highlighting or halo effect. The person is wearing a charcoal colored suit jacket, burgundy silk blouse, and a gold chain necklace."
  style="float: right;" width="250" /></p>
 <p>NAME: aeva black</p>
 <p>AGE: about 40</p>
@@ -100,7 +100,7 @@
 <p>COMPUTER LANGUAGES: C/C++, Tcl/Tk, Perl, Python, PHP, bash, SQL</p>
 <p>BIOGRAPHY:</p>
 <blockquote>
-<p>Aeva Black is an open source hacker in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They are a board member of the Open Source Initiative, and previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. While a Master Engineer at HPE, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
+<p>Aeva Black is an open source hacker in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They are a (newly elected) board member of the Open Source Initiative, and previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. While working at HP Cloud, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
 <p>Aeva is a queer and non-binary geek, a lifelong student of the buddha dharma, a consent advocate, an aspiring author, and a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they are committed to improving diversity and inclusion in the tech industry, and advocating for digital privacy rights.</p>
 </blockquote>
 
