--- a/about/index.html
+++ b/about/index.html
@@ -99,10 +99,9 @@
 <p>DEAD NAME: XXXXXXXXX XXXXXXXXXX</p>
 <p>COMPUTER LANGUAGES: C/C++, Tcl/Tk, Perl, Python, PHP, bash, SQL</p>
 <p>BIOGRAPHY:</p>
-<blockquote>
-<p>Aeva Black is an open source hacker in the Azure Office of the CTO, working on software supply chain security, confidential computing, and cloud native computing. They are a (newly elected) board member of the Open Source Initiative, and previously held positions in the Confidential Computing Consortium, on the OpenStack Technical Committee, and on the Board of the Consent Academy. While working at HP Cloud, they led the creation of the OpenStack &quot;Ironic&quot; bare metal cloud project.</p>
-<p>Aeva is a queer and non-binary geek, a lifelong student of the buddha dharma, a consent advocate, an aspiring author, and a regular speaker at both #InfoSec and #OpenSource conferences and meetups around the world. In addition to their technical work, they are committed to improving diversity and inclusion in the tech industry, and advocating for digital privacy rights.</p>
-</blockquote>
+<p>Once described as &quot;an ancient and powerful open source dragon,&quot; Aeva Black is a dot-com veteran, an open source hacker, and a queer and non-binary geek. They work in the Azure Office of the CTO to improve the state of open source software supply chain security, and to support teams working on cloud security and digital privacy. Back in 2012, they launched OpenStack's Bare Metal Cloud program, enabling performance-sensitive cloud native workloads to run without a hypervisor.</p>
+<p>Aeva currently serves on the Board of the Open Source Initiative, the non-profit which stewards the definition of &quot;open source&quot;, and works within several other foundations including the Confidential Computing Consortium and the Cloud Native Computing Foundation.</p>
+<p>Aeva is a lifelong student of the buddha dharma and an advocate for LGBTQIA+ rights. They served for several years on the Board of the Consent Academy, a Seattle-area educational non-profit, and were recently published in Transcending, an anthology of trans buddhist authors.</p>
 
     </div>
 
