--- a/media/index.html
+++ b/media/index.html
@@ -98,7 +98,8 @@
 <tr><td>11 Oct</td><td><a href="https://supplychainsecurityconna21.sched.com/">Supply Chain Security Con</a></td><td><a href="https://sched.co/n00A">Finding Your Way: a Survey of Supply Chains</a></td></tr>
 <tr><td>19 Oct</td><td><a href="https://secdev.ieee.org/2021/home">IEEE-SecDev</a></td><td><a href="https://secdev.ieee.org/2021/software-supply-chain/">Panel: Understanding and Mitigating Software Supply Chain Security Risks</a></td></tr>
 <tr><td>3 Nov</td><td><a href="https://events.linuxfoundation.org/lf-member-summit/">Linux Foundation Member Summit</a></td><td><a href="https://sched.co/nDn3">Walking the Cultural Tightrope: Why We Need Codes of Conduct, and Why They're Not Enough</a></td></tr>
-<tr><td>5-6 Nov</td><td>SeaGL</td><td>(TBA)</td></tr>
+<tr><td>5-6 Nov</td><td>?SeaGL?</td><td>?</td></tr>
+<tr><td>December</td><td>???</td><td>???</td></tr>
 </tbody></table>
 <h1 id="2021">2021</h1>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
