--- a/media/index.html
+++ b/media/index.html
@@ -96,8 +96,8 @@
 <h1 id="upcoming-talks">Upcoming Talks</h1>
 <table><thead><tr><th>Date</th><th>Event</th><th>Session</th></tr></thead><tbody>
 <tr><td>3 Nov</td><td><a href="https://events.linuxfoundation.org/lf-member-summit/">Linux Foundation Member Summit</a></td><td><a href="https://sched.co/nDn3">Walking the Cultural Tightrope: Why We Need Codes of Conduct, and Why They're Not Enough</a></td></tr>
-<tr><td>5-6 Nov</td><td>SeaGL</td><td>?</td></tr>
-<tr><td>December</td><td>???</td><td>???</td></tr>
+<tr><td>5-6 Nov</td><td>SeaGL</td><td><a href="https://osem.seagl.org/conferences/seagl2021/program/proposals/828">Computing Confidentially in the Clouds</a> and <a href="https://osem.seagl.org/conferences/seagl2021/program/proposals/829">Walking the Cultural Tightrope</a></td></tr>
+<tr><td>... and more!</td><td></td><td></td></tr>
 </tbody></table>
 <h1 id="2021">2021</h1>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
