update bio page

--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,7 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
-        <h1 itemprop="headline">Dossier: Aeva Black</h1>
+        <h1 itemprop="headline">About: Aeva Black</h1>
         <span class="muted">
     <svg style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
@@ -90,17 +90,14 @@
       <p><img src="profile.jpeg"
  alt="Profile photo of a non-binary person with olive skin, sporting purple chin-length hair and a side shave, with gold-rimmed glasses. The background is grey with a highlighting or halo effect. The person is wearing a charcoal colored suit jacket, burgundy silk blouse, and a gold chain necklace."
  style="float: right;" width="250" /></p>
-<p>NAME: aeva black</p>
+<p>NAME: Aeva Black</p>
+<p>TITLE: Open Source Hacker</p>
 <p>AGE: about 40</p>
 <p>GENDER: irrelevant</p>
 <p>LOCATION: seattle, wa</p>
-<p>FAVORITE COLOR: red/black</p>
-<p>CURRICULUM VITAE: classified</p>
-<p>DEAD NAME: XXXXXXXXX XXXXXXXXXX</p>
-<p>COMPUTER LANGUAGES: C/C++, Tcl/Tk, Perl, Python, PHP, bash, SQL</p>
 <p>BIOGRAPHY:</p>
-<p>Once described as &quot;an ancient and powerful open source dragon,&quot; Aeva Black is a dot-com veteran, an open source hacker, and a queer and non-binary geek. They work in the Azure Office of the CTO to improve the state of open source software supply chain security, and to support teams working on cloud security and digital privacy. Back in 2012, they launched OpenStack's Bare Metal Cloud program, enabling performance-sensitive cloud native workloads to run without a hypervisor.</p>
-<p>Aeva currently serves on the Board of the Open Source Initiative, the non-profit which stewards the definition of &quot;open source&quot;, and works within several other foundations including the Confidential Computing Consortium and the Cloud Native Computing Foundation.</p>
+<p>Aeva Black is a dot-com veteran, an open source hacker, and a queer and non-binary geek. They work in the Azure Office of the CTO's OSS Ecosystems team, focusing on improving open source software supply chain security, and support teams working on cloud security and digital privacy. Before joining Microsoft, they launched OpenStack's Bare Metal Cloud program while at HPE, and spent seven years building high-performance MySQL databases before that.</p>
+<p>Aeva currently serves on the Board of the Open Source Initiative and works within several other foundations, including the Confidential Computing Consortium and the Cloud Native Computing Foundation, and previously served on the Kubernetes Code of Conduct Committee and the OpenStack Technical Committee.</p>
 <p>Aeva is a lifelong student of the buddha dharma and an advocate for LGBTQIA+ rights. They served for several years on the Board of the Consent Academy, a Seattle-area educational non-profit, and were recently published in Transcending, an anthology of trans buddhist authors.</p>
 
     </div>
