create full length bio page, and add new talk links

--- a/about/index.html
+++ b/about/index.html
@@ -87,7 +87,7 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      <p><img src="profile.jpeg"
+      <p><img src="profile_300.jpeg"
  alt="Profile photo of a non-binary person with olive skin, sporting purple chin-length hair and a side shave, with gold-rimmed glasses. The background is grey with a highlighting or halo effect. The person is wearing a charcoal colored suit jacket, burgundy silk blouse, and a gold chain necklace."
  style="float: right;" width="250" /></p>
 <p>NAME: Aeva Black</p>
