fix image path in bios.md

--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -99,11 +99,11 @@
 <p>Aeva also served on the Board of Directors for the Consent Academy, a Seattle-area educational non-profit, for several years. They were published in 2019 in &quot;Transcending&quot;, an anthology of trans buddhist writers, and are the technical editor of a forth-coming book, &quot;Trust in Computer Systems and the Cloud&quot; (eta Jan '22).</p>
 <h2 id="head-shots">Head shots</h2>
 <p>(1500 x 1500) 
-<img src="profile.jpeg" width="600"></p>
+<img src="../profile.jpeg" width="600"></p>
 <p>(500 x 500)
-<img src="profile_500.jpeg" width="200"></p>
+<img src="../profile_500.jpeg" width="200"></p>
 <p>(300 x 300)
-<img src="profile_300.jpeg" width="125"></p>
+<img src="../profile_300.jpeg" width="125"></p>
 
     </div>
 
