update header or something

--- a/media/speaker-rider/index.html
+++ b/media/speaker-rider/index.html
@@ -37,8 +37,8 @@
                         
                             <a itemprop="url"
                                class=""
-                               href="&#x2F;journal&#x2F;">
-                                <span itemprop="name">journal |
+                               href="&#x2F;blog&#x2F;">
+                                <span itemprop="name">blog |
                                 </span></a>
                         
                             <a itemprop="url"
@@ -121,7 +121,7 @@
 <h3 id="cancellations">Cancellations</h3>
 <p>Cancelling a speaking engagement is something I try very, very hard to avoid. That said, the ongoing global pandemic means that a cancellation is more likely than ever before. In the case of a surge, either globally or locally, as a result of a new variant or not, I reserve the right to pull out of your event for my own safety and the safety of others. In that case, I will make my best effort to offer a remote presentation. If that is not possible and it is appropriate to do so, I may suggest an alternate speaker take my slot.</p>
 <h3 id="contacting-me">Contacting Me</h3>
-<p>Want to have me speak? Cool! Reach out to me via <a href="mailto:aeva.online@gmail.com">email</a> with the name, dates, and website for your event, as well as any confirmed speakers and an idea of what you want me to talk about. If your event fits into the corporate events category, please also include your speaker budget.</p>
+<p>Want to have me speak? Cool! Reach out to me via <a href="mailto:aeva@aeva.online">email</a> with the name, dates, and website for your event, as well as any confirmed speakers and an idea of what you want me to talk about. If your event fits into the corporate events category, please also include your speaker budget.</p>
 <p>Thanks for reading!</p>
 <p>// Derived from Kat Cosgrove's Speaker's Rider. //</p>
 <p>// Original source: <a href="github.com/katcosgrove/katcosgrove/blob/main/speaking.md">github.com/katcosgrove/katcosgrove/blob/main/speaking.md</a> //</p>
