--- a/about/bios/index.html
+++ b/about/bios/index.html
@@ -88,7 +88,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>2 minute read</span>
+    <span>4 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -100,23 +100,72 @@
     </header>
     <div itemprop="articleBody">
       <p>Hi! I'm Aeva Black, and you have found a page with several bios!</p>
-<p>Like everyone who has such a page, this one is probably out of date already. If today is more than a year since <strong>February 13, 2022</strong>, and you came here to get a blurb for, say, a conference brochure or by-line, please <a href="../contact/">email me</a> instead and ask for something more recent.</p>
+<p>Like everyone who has such a page, this one is probably out of date already. If
+today is more than a year since <strong>February 13, 2022</strong>, and you came here to get
+a blurb for, say, a conference brochure or by-line, please
+<a href="../contact/">email me</a> instead and ask for something more recent.</p>
 <p>If you're just looking for a headshot, please scroll to the bottom.</p>
 <p>Thanks!</p>
 <hr />
-<h2 id="one-paragraph-500-characters"><strong>One Paragraph</strong> (500 characters)</h2>
-<p>Aeva Black is an incurably queer geek, passionate about privacy, ethics, and inclusivity. They work in Azure's Office of the CTO and focus on open source community safety and supply chain security. Aeva currently serves on the OSI Board, the OpenSSF TAC, and as a CNCF Board Shadow. Before joining Microsoft or moving to Seattle, Aeva founded the OpenStack Ironic project, served on the board of the Consent Academy, managed a few small MySQL databases, and lived on a tiny farm in the Olympic Mountains.</p>
-<h2 id="slightly-longer-1-000-characters"><strong>Slightly Longer</strong> (1,000 characters)</h2>
-<p>Aeva Black is an incurably queer geek and a dot-com veteran, passionate about privacy, ethics, and inclusivity. They work in Azure's Office of the CTO and serve as a member of the Board of the Open Source Initiative, a member of the OpenSSF Technical Advisory Council, and a Board Shadow in the Cloud Native Computing Foundation. Aeva previously served on the OpenStack Technical Committee and on the Board of the Consent Academy. Many years ago, Aeva founded the OpenStack Ironic project, wrote a lot of Python, and managed a few small MySQL databases.</p>
-<p>Having grown up a gender-non-conforming third-culture-kid, Aeva's unique perspective and precise communication style often inspires others to question their assumptions. Their recent writing includes contributing to &quot;Transending: An Anthology Of Trans Buddhist Voices&quot; (2019), and being the technical editor for &quot;Trust In Computer Systems And The Cloud&quot; (2021).</p>
+<h2 id="one-paragraph"><strong>One Paragraph</strong></h2>
+<p>Aeva Black is an incurably queer geek, passionate about privacy and ethics in
+tech. They're an open source hacker in Azure's Office of the CTO, focusing on
+community safety and supply chain security, and currently serve on the OSI
+Board, the OpenSSF TAC, and as a CNCF Board Shadow. In a previous life, Aeva
+founded the OpenStack Ironic project, served on the board of the Consent
+Academy, managed a few small MySQL databases, and lived on a tiny farm in the
+Olympic Mountains.</p>
+<h2 id="one-paragraph-alternate"><strong>One Paragraph Alternate</strong></h2>
+<p>Aeva Black is an incurably queer geek with a penchant for ancient languages, who
+was briefly a physics major and may have solved time travel¹. Today, they're an
+open source hacker in Azure's Office of the CTO, focusing on supply chain
+security and community safety while holding seats on the OSI Board and the
+OpenSSF TAC. On a previous timeline, they were a database admin and hardware
+hacker who wrote a lot of code and founded the OpenStack Ironic project. (¹ not really)</p>
+<h2 id="two-paragraphs-1-000-characters"><strong>Two Paragraphs</strong> (1,000 characters)</h2>
+<p>Aeva Black is an incurably queer geek and open source hacker, passionate about
+privacy, ethics, and ancient languages. They work in Azure's Office of the CTO
+and hold seats on the Board of the Open Source Initiative and on the OpenSSF's
+Technical Advisory Council. Aeva previously served on the OpenStack Technical
+Committee and on the Board of the Consent Academy. Many years ago, Aeva founded
+the OpenStack Ironic project, wrote a lot of Python, and managed a few small
+MySQL databases.</p>
+<p>Aeva is a lifelong student of the Buddha Dharma and a frequent keynote speaker
+at open source conferences around the world. They are also an aspiring, yet
+time-starved, writer whose recent works include contributing to &quot;Transending: An
+Anthology Of Trans Buddhist Voices&quot; (2019), and being the technical editor for
+&quot;Trust In Computer Systems And The Cloud&quot; (2021).</p>
+<p>You can reach them at aeva at aeva dot online, or find them on twitter at
+@aevavoom.</p>
+<h2 id="longer-version-1-300-chars"><strong>Longer Version</strong> (1,300 chars)</h2>
+<p>Aeva Black is an incurably queer geek, open source hacker, and a dot-com veteran
+with a 20+ year career spanning several startups and Fortune 500 Companies,
+including HPE, IBM, and Microsoft. Their areas of expertise include open source
+strategy and community management, containers, databases, bare metal
+orchestration, and security. Aeva currently works in Azure's Office of the CTO
+and hold seats on the Board of the Open Source Initiative, on the OpenSSF's
+Technical Advisory Council, and a shadow seat on the Board of the Cloud Native
+Computing Foundation.</p>
+<p>In a previous life, Aeva was the founding member and technical lead of the
+OpenStack Ironic project, and held seats on the OpenStack Technical Committee,
+the Kubernetes Code of Conduct Committee, and on the Board of the Consent
+Academy.</p>
+<p>Aeva is a frequent keynote speaker at open source conferences around the world,
+advocating to make technology more ethical and inclusive, and a lifelong student
+of the Buddha Dharma. They are also an aspiring writer whose recent works
+include contributing to &quot;Transending: An Anthology Of Trans Buddhist Voices&quot;
+(2019), and being the technical editor for &quot;Trust In Computer Systems And The
+Cloud&quot; (2021).</p>
+<p>You can reach them at aeva at aeva dot online, or find them on twitter at
+@aevavoom.</p>
 <hr />
 <h2 id="head-shots">Head shots</h2>
 <p>(1500 x 1500) 
-<img src="profile.jpeg" width="600"></p>
+<img src="../profile.jpeg" width="600"></p>
 <p>(500 x 500)
-<img src="profile_500.jpeg" width="200"></p>
+<img src="../profile_500.jpeg" width="200"></p>
 <p>(300 x 300)
-<img src="profile_300.jpeg" width="125"></p>
+<img src="../profile_300.jpeg" width="125"></p>
 
     </div>
 
