update media list

--- a/media/index.html
+++ b/media/index.html
@@ -88,7 +88,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>5 minute read</span>
+    <span>6 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -104,7 +104,16 @@
 <p>If you came here looking for a headshot or bio, you'll <a href="/about/bios">find those on my bios page</a>.</p>
 <p>Below the break, you can find a list of confirmed/upcoming presentations, as well as all my recent publications and public appearances.</p>
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
-<p>// none currently scheduled //</p>
+<h2 id="2022">2022</h2>
+<table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
+<tr><td>5/16</td><td>Cloud Native Security Conference</td><td><a href="https://sched.co/zsUV">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a>]</td></tr>
+<tr><td>5/25</td><td>SwampUp</td><td>Securing the DevOps Pipeline</td></tr>
+<tr><td>6/6</td><td>TBA</td><td>talk</td></tr>
+<tr><td>6/7</td><td><a href="upstream.live">Upstream</a></td><td>keynote</td></tr>
+<tr><td>8/11</td><td>TBA</td><td>TBA</td></tr>
+<tr><td>?</td><td>Podcast #1</td><td>TBA</td></tr>
+<tr><td>?</td><td>Podcast #2</td><td>TBA</td></tr>
+</tbody></table>
 <h1 id="past-appearances">Past Appearances</h1>
 <h2 id="2021">2021</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
