fix external url

--- a/media/index.html
+++ b/media/index.html
@@ -109,7 +109,7 @@
 <tr><td>5/16</td><td>Cloud Native Security Conference</td><td><a href="https://sched.co/zsUV">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a>]</td></tr>
 <tr><td>5/25</td><td>SwampUp</td><td>Securing the DevOps Pipeline</td></tr>
 <tr><td>6/6</td><td>TBA</td><td>talk</td></tr>
-<tr><td>6/7</td><td><a href="upstream.live">Upstream</a></td><td>keynote</td></tr>
+<tr><td>6/7</td><td><a href="https://upstream.live/">Upstream</a></td><td>keynote</td></tr>
 <tr><td>8/11</td><td>TBA</td><td>TBA</td></tr>
 <tr><td>?</td><td>Podcast #1</td><td>TBA</td></tr>
 <tr><td>?</td><td>Podcast #2</td><td>TBA</td></tr>
