--- a/media/index.html
+++ b/media/index.html
@@ -106,12 +106,12 @@
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
 <h2 id="2022">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
+<tr><td>4/6</td><td>The CTO Advisor: GitBOM</td><td>https://thectoadvisor.com/gitbom-podcast/</td></tr>
 <tr><td>5/16</td><td>Cloud Native Security Conference</td><td><a href="https://sched.co/zsUV">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a>]</td></tr>
 <tr><td>5/25</td><td>SwampUp</td><td>Securing the DevOps Pipeline</td></tr>
 <tr><td>6/6</td><td>TBA</td><td>talk</td></tr>
 <tr><td>6/7</td><td><a href="https://upstream.live/">Upstream</a></td><td>keynote</td></tr>
 <tr><td>8/11</td><td>TBA</td><td>TBA</td></tr>
-<tr><td>?</td><td>Podcast #1</td><td>TBA</td></tr>
 <tr><td>?</td><td>Podcast #2</td><td>TBA</td></tr>
 </tbody></table>
 <h1 id="past-appearances">Past Appearances</h1>
