--- a/media/index.html
+++ b/media/index.html
@@ -106,8 +106,6 @@
 <h1 id="upcoming-appearances">Upcoming Appearances</h1>
 <h2 id="2022">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
-<tr><td>5/16</td><td>Cloud Native Security Conference</td><td><a href="https://sched.co/zsUV">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a>]</td></tr>
-<tr><td>5/25</td><td><a href="https://swampup.jfrog.com/agenda/">SwampUp</a></td><td>Securing the DevOps Pipeline</td></tr>
 <tr><td>6/7</td><td><a href="https://upstream.live/">Upstream</a></td><td>keynote</td></tr>
 <tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11QaM">keynote</a></td></tr>
 <tr><td>6/21</td><td><a href="https://events.linuxfoundation.org/open-source-summit-north-america/">Open Source Summit NA</a></td><td><a href="https://sched.co/11Njh">GitBOM: repurposing Git's graph for supply chain security</a></td></tr>
@@ -121,8 +119,10 @@
 <h1 id="past-appearances">Past Appearances</h1>
 <h2 id="2022-1">2022</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
-<tr><td>4/6</td><td>The CTO Advisor: GitBOM</td><td>https://thectoadvisor.com/gitbom-podcast/</td></tr>
-<tr><td>5/5</td><td>O'Reilly SuperStream</td><td>https://www.oreilly.com/products/superstreams.html</td></tr>
+<tr><td>5/25</td><td><a href="https://swampup.jfrog.com/agenda/">SwampUp</a></td><td>Securing the DevOps Pipeline</td></tr>
+<tr><td>5/16</td><td><a href="https://sched.co/zsUV">Cloud Native Security Conference</a></td><td><a href="https://youtu.be/2SSkNLWL4UM">Repurposed Purpose: using git's DAG for supply chain artifact resolution</a></td></tr>
+<tr><td>5/5</td><td>O'Reilly SuperStream</td><td><a href="https://www.oreilly.com/products/superstreams.htm">https://www.oreilly.com/products/superstreams.html</a></td></tr>
+<tr><td>4/6</td><td>The CTO Advisor: GitBOM</td><td><a href="https://thectoadvisor.com/gitbom-podcast/">https://thectoadvisor.com/gitbom-podcast/</a></td></tr>
 </tbody></table>
 <h2 id="2021">2021</h2>
 <table><thead><tr><th>Date</th><th>Event / Publication</th><th>Details</th></tr></thead><tbody>
